# cadenzier

./: .gitattributes  .gitignore  Cargo.toml  README.md
cdnz/: Cargo.toml  LICENSE-MIT  README.md  rustfmt.toml
cdnz/examples/: beethoven_symphony_no_5.cdnx  beethoven_symphony_no_5.cdnz
cdnz/src/: cdnz_serde.rs  lib.rs  lilypond.rs  types.rs  upgrade.rs
cdnz/tests/: beethoven_symphony_no_5.rs
core/: Cargo.toml  README.md
docs/: zensical.toml
downloads/: lilypond-2.24.4-darwin-x86_64.tar.zst  lilypond-2.24.4-linux-x86_64.tar.zst  (+1 more)
editor/: Cargo.toml  README.md  core.gdextension  core.gdextension.uid  default.nix  export_presets.cfg  flake.nix  project.godot
editor/assets/: icon.icns  iosevka_nerd_font_regular.ttf.import
editor/resources/_global/: theme.tres
editor/resources/editor/: lilypond_code_highlighter.gd  lilypond_code_highlighter.gd.uid  lilypond_code_highlighter.tres
editor/scenes/: main.tscn  render.tscn  settings.tscn  side_panel.tscn  viewport.tscn
editor/scenes/viewport/: viewport_canvas.tscn
editor/scripts/_global/: config.gd  config.gd.uid
editor/scripts/main/: commands.gd  commands.gd.uid  docs_viewer.gd.uid  input_handler.gd  input_handler.gd.uid  state.gd  state.gd.uid  statusbar.gd  statusbar.gd.uid
editor/scripts/main/statusbar/: mode_indicator.gd  mode_indicator.gd.uid
editor/scripts/render/: camera.gd  camera.gd.uid  render.gd  render.gd.uid
editor/scripts/settings/: setup.gd  window.gd.uid
editor/scripts/viewport/: rendering.gd  rendering.gd.uid
editor/src/: config.rs  gui.rs  lilypond.rs  main.rs  sfizz.rs
editor/src/config/: keyboard.rs
editor/src/gui/: help.rs  keyboard.rs  panes.rs  render.rs  setup.rs  style.rs  tab.rs  write.rs
editor/src/gui/panes/: pane.rs
editor/src/gui/panes/pane/: blank.rs  help.rs  render.rs  setup.rs  write.rs
editor/src/gui/style/: icons.rs
editor/src/gui/tab/: pane.rs
editor/src/gui/tab/pane/: blank.rs  render.rs  write.rs
(+33 files in other folders)
