[package]
name = "cdnz"
description = "An open data format for storing music"
license = "LGPL-3.0-or-later"
repository = "https://codeberg.org/twilit-jack/cadenza"
documentation = "https://docs.rs/cdnz"

version = "0.1.4"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
num = { version = "0.4.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = "3.19.0"
tar = "0.4.45"
thiserror = "2.0.18"
zstd = "0.13.3"
