[package]
name = "cdnz"
description = "An open data format for storing music"
license = "LGPL-3.0-or-later"
repository = "https://codeberg.org/twilit-jack/cadenzier"
documentation = "https://docs.rs/cdnz"

version = "0.3.0-dev"
edition = "2024"

[features]
default = []
lilypond = []

[dependencies]
num = { version = "0.4.3", features = ["serde"] }
thiserror = "2.0.18"

serde = { version = "1.0.228", features = ["derive"] }
serde_with = "3.19.0"
ciborium = "0.2.2"
zstd = "0.13.3"
serde_bytes = "0.11.19"
heck = "0.5.0"
