[package]
name = "cadenza"
version = "0.1.0"
edition = "2024"

[dependencies]
cdnz = { path = "../cdnz", features = ["lilypond"] }
ciborium = "0.2.2"
directories = "6.0.0"
iced = { version = "0.14.0", features = ["canvas", "svg"] }
iced_core = "0.14.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_with = "3.20.0"
